Fix the height of date and time input is small on iOS Safari

--- a/app/assets/stylesheets/components/forms.scss
+++ b/app/assets/stylesheets/components/forms.scss
@@ -66,6 +66,10 @@
     display: none;
   }
 
+  &::-webkit-date-and-time-value {
+    min-height: 1.5em;
+  }
+
   &--icon {
     padding-left: var(--su-7);
   }
